--- a/C言語/Ctoi_nishiura/Ctoi_nishiura/Ctoi_nishiura.vcxproj
+++ b/C言語/Ctoi_nishiura/Ctoi_nishiura/Ctoi_nishiura.vcxproj
@@ -136,7 +136,10 @@
     <ClCompile Include="C_toi3.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="C_toi4.c" />
+    <ClCompile Include="C_toi4.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="one_stroke.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
