--- a/C言語/Ctoi_nishiura/Ctoi_nishiura/Ctoi_nishiura.vcxproj.filters
+++ b/C言語/Ctoi_nishiura/Ctoi_nishiura/Ctoi_nishiura.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="C_toi4.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="one_stroke.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
