--- a/ゲ数Ⅱ/ProjectVec/ProjectVec/ProjectVec.vcxproj
+++ b/ゲ数Ⅱ/ProjectVec/ProjectVec/ProjectVec.vcxproj
@@ -127,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Vec.cpp" />
+    <ClCompile Include="EnemyPos.cpp" />
+    <ClCompile Include="Vec.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
