--- a/ゲ数Ⅱ/ProjectVec/ProjectVec/ProjectVec.vcxproj.filters
+++ b/ゲ数Ⅱ/ProjectVec/ProjectVec/ProjectVec.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Vec.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyPos.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
